# dotfiles

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  dotfiles.code-workspace  pyproject.toml
.github/workflows/: create-diagram.yml
.local/: env_settings_example.json
basic-tutorials/: how-to-get_WSL_running.md  how-to_arch_installation.md  how-to_assembler.md  how-to_bash.md  how-to_create_a_new_project.md  how-to_denfiles.md  how-to_fedora_installation.md  how-to_init_a_git_repo.md  how-to_powershell_environment_vars.md  how-to_tidal_cycles_install.md  how-to_windows_dotfiles_and_choco_only.md  how-to_windows_installation.md  how-to_windows_package_manager.md
coding-tutorials/: cool-python-commands.md  fixing-python-errors.md  how-to-deploy-to-a-server.md
common/alacritty/: alacritty.yml  bindings.yml  hints.yml
common/autohotkey/: vim-caps-is-esc.ahk  windows-terminal-quake-dropdown.ahk
common/bash/: .bash_aliases
common/emacs/: .emacs
common/fish/: aliases.fish  config.fish  install_fisher_plugins.fish
common/flameshot/: flameshot.cfg
common/fortunes/: anarchism.txt  fortune.txt
common/geany/: geany.conf
common/git/: .gitconfig  .gitconfig.includes
common/llm/: aliases.json  default_model.txt  gpt4all_models2.json
common/micro/: settings.json
common/powershell/: Aliases.ps1  Bugfixes.ps1  Microsoft.PowerShell_profile.ps1  Paths.ps1  powershell.config.json
common/projectM/: playlist.xml
common/python/: system-packages.txt  uv.toml
common/starship/: starship.toml
common/vim/: .vimrc
common/vscode/: extensions.json
common/wsl/: .wslconfig  get-wsl-runnning.md
common/wt/: settings.json
config/windows/: .hyper.js
docs/: commands.json
install/commands/: windows-cli.json
install/crates/: cargo-tools.json
install/scoops/: scoop-packages.json
tutorials/: 1-post-installation-windows10.md  2-how-to-windows-dotfiles.md  env_settings_example.json  how-to_create_a_new_project.md  how-to_dotfiles.md  how-to_init_a_git_repo.md  how-to_windows_dotfiles_and_choco_only.md  interesting-blogposts.md  interesting_blogposts.md  link-library.md  link_library.md
(+216 files in other folders)
