[tool.poetry]
name = "dotfiles"
version = "1.0.0"
description = "oryons dotfiles"
authors = ["oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "~3.11"
pre-commit = "^2.16.0"
ipython = "^7.31.0"
passlib = "^1.7.4"
cryptography = "^36.0.1"
sshconf = "^0.2.2"
pip-tools = "^6.4.0"
httpx = "^0.23.0"
rich = "^10.16.2"
typer = "^0.4.0"
pendulum = "^2.1.2"
humanize = "^3.13.1"
numpy = "^1.22.0"
jupyter = "^1.0.0"
pwntools = "^4.7.0"
seaborn = "^0.11.2"
pandas = "^1.4.1"
PyAutoGUI = "^0.9.53"
scipy = "^1.9.3"
git-fame = "^1.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
