[project]
version = "1.2.0"
name = "dotfiles"
description = "oryons dotfiles"
readme = "README.md"
authors = [
    {name ="oryon-dominik", email="oryon@cyberise.de"}
]
requires-python = ">=3.12"

dependencies = []
# System packages are located in common/python/system-packages.txt now.
# https://peps.python.org/pep-0621/

license = { text = "Proprietary. All rights reserved.  Just ask (!) me if you want to use something." }
keywords = ["dotfiles", "powershell", "bash"]

classifiers = [
    "Development Status :: Always WIP, that's my personal space trash dump",
    "Programming Language :: Python"
]

[project.urls]
repository = "https://github.com/oryon-dominik/dotfiles"
